feat: 使更多组件可切换鼠标指针